Fix overflowing code in long examples

--- a/preview/assets/main.css
+++ b/preview/assets/main.css
@@ -69,6 +69,7 @@ body {
   overflow: scroll;
   width: 100%;
   height: 100%;
+  max-height: 80vh;
   box-sizing: border-box;
 }
 
